- added functional test and unit tests for the backend service - configuration is now done in the config/config_test ymls

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,7 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+parameters:
+    mongo_connection_string: mongodb://localhost:27017
+    mongo_database_name: minventar_test
