--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    mongo_connection_string: mongodb://localhost:27017
+    mongo_database_name: minventar
 
 framework:
     #esi:             ~
