--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "twbs/bootstrap": "3.3.*",
     "components/backbone": "1.2.*",
     "components/jquery": "2.1.*",
-    "components/handlebars.js": "3.0.*"
+    "components/handlebars.js": "3.0.*",
+    "maxazan/jquery-treegrid": "0.3.0"
   },
   "require-dev": {
     "sensio/generator-bundle": "~2.3"
