- changed the project and license name  in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "symfony/framework-standard-edition",
-  "license": "MIT",
+  "name": "fashionforhome/minventar",
+  "license": "GPL-3.0",
   "type": "project",
   "description": "The \"Symfony Standard Edition\" distribution",
   "autoload": {
