--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   },
   "require": {
-    "php": ">=5.3.9",
+    "php": ">=5.4.0",
+    "ext-mongo": ">=1.5.0",
     "symfony/symfony": "2.7.*",
     "doctrine/orm": "~2.5",
     "doctrine/dbal": "~2.5",
